<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">WifiCar</string>
    <string name="action_settings">Settings</string>
    <string name="welcome">Welcome to WifiCar!</string>
    <string name="left">←</string>
    <string name="right">→</string>
    <string name="up">↑</string>
    <string name="down">↓</string>
    <string name="slow">慢</string>
    <string name="fast">快</string>
    <string name="start">启动</string>
    <string name="title_activity_ip__port">IP_PortActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="ip">192.168.4.1</string>
    <string name="port">8086</string>
    <string name="connect">连接</string>
    <string name="exit">退出</string>

</resources>
