<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" 
    android:background="@drawable/bgp">
<LinearLayout 
    android:layout_width="match_parent"
    android:layout_height="230dp">
    <ImageView 
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/lbg"
        />
</LinearLayout>
<LinearLayout 
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center">
<LinearLayout 
    android:layout_width="match_parent"
    android:layout_height="50dp"
    android:orientation="horizontal"
    android:gravity="center">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_marginLeft="16dp"
        android:text="I       P:"
        android:textStyle="bold"
        android:textSize="16sp"
        android:gravity="center"
        />

    <EditText
        android:id="@+id/ipaddress"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/ip" />

</LinearLayout>    
  
<LinearLayout 
    android:layout_width="match_parent"
    android:layout_height="50dp"
    android:orientation="horizontal"
    android:gravity="center">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_marginLeft="16dp"
        android:text="PORT:"
        android:textStyle="bold"
        android:textSize="16sp"
        android:gravity="center"/>
    <EditText 
        android:id="@+id/portnum"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/port"/>
</LinearLayout>
    
    
    <LinearLayout 
        android:layout_marginTop="16dp"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:gravity="center">
        <Button 
            android:id="@+id/connect"
        android:layout_width="80dp"
        android:layout_height="match_parent"
        android:layout_marginRight="16dp"
        android:text="@string/connect"
        android:background="@drawable/rbutton"/>
        <Button 
            android:id="@+id/exit"
        android:layout_width="80dp"
        android:layout_height="match_parent"
        android:layout_marginLeft="16dp"
        android:text="@string/exit"
        android:background="@drawable/rbutton"/>
    </LinearLayout>
</LinearLayout>    
    
    

</LinearLayout>
