<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bgp"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="230dp" >

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/lbg" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal" >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:orientation="vertical"
            android:weightSum="3" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="horizontal"
                android:weightSum="3" >

                <TextView
                    android:layout_width="30dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/slow"
                    android:textSize="16sp" />

                <SeekBar
                    android:id="@+id/seekBar1"
                    android:layout_width="240dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="8dp"
                    android:layout_marginRight="8dp" />

                <TextView
                    android:layout_width="30dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/fast"
                    android:textSize="16sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:orientation="horizontal"
                android:weightSum="3" >

                <ToggleButton
                    android:id="@+id/leftled"
                    android:layout_width="50dp"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="40dp"
                    android:layout_weight="1"
                    android:background="@drawable/obutton" />

                <LinearLayout
                    android:layout_width="50dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1" >
                </LinearLayout>

                <ToggleButton
                    android:id="@+id/rightled"
                    android:layout_width="50dp"
                    android:layout_height="match_parent"
                    android:layout_marginRight="40dp"
                    android:layout_weight="1"
                    android:background="@drawable/obutton" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_weight="1"
                android:gravity="center" >

                <Button
                    android:id="@+id/buttonup"
                    android:layout_width="80dp"
                    android:layout_height="match_parent"
                    android:layout_margin="8dp"
                    android:background="@drawable/rbutton"
                    android:text="@string/up" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginBottom="8dp"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="horizontal"
                android:weightSum="3" >

                <Button
                    android:id="@+id/buttonleft"
                    android:layout_width="80dp"
                    android:layout_height="match_parent"
                    android:layout_margin="8dp"
                    android:background="@drawable/rbutton"
                    android:text="@string/left" />

                <Button
                    android:id="@+id/buttondown"
                    android:layout_width="80dp"
                    android:layout_height="match_parent"
                    android:layout_margin="8dp"
                    android:background="@drawable/rbutton"
                    android:text="@string/down" />

                <Button
                    android:id="@+id/buttonright"
                    android:layout_width="80dp"
                    android:layout_height="match_parent"
                    android:layout_margin="8dp"
                    android:background="@drawable/rbutton"
                    android:text="@string/right" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

</LinearLayout>